@@ -1,5 +1,8 @@
 2003-07-24  Martin Blom  <martin@blom.org>
 
+	* Bugfixed the ix86be-amithlon version and removed that beta
+	requester at startup.
+
 	* Removed void.audio from default build, since it's just an
 	example driver.
 
